Wed Mar 10 16:00:14 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* struct.c (rb_struct_s_def): Struct::new executes block with
	  generated struct class. [ruby-talk:02606]

Wed Mar 10 15:58:43 2004  Ryan Davis  <ryand@zenspider.com>

	* eval.c (eval): Only print backtrace if generating the backtrace
	  doesn't generate an exception.  [ruby-core:02621]

Wed Mar 10 10:15:16 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (opt_W_getter): get rid of warning.

	* bcc32/Makefile.sub, win32/Makefile.sub, wince/Makefile.sub:
	  fixed dependency.

Tue Mar  9 13:04:26 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_ungetc): raise IOError instead of calling
	  rb_sys_fail().  [ruby-talk:23181]

Tue Mar 09 10:03:40 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* bcc32/Makefile.sub, win32/Makefile.sub, wince/Makefile.sub:
	  replaced regex.c entry with Oniguruma files.

Tue Mar  9 01:09:46 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* Makefile.in: replaced regex.c entry with Oniguruma files.

Mon Mar  8 23:16:07 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: HTTPHeader did not initialized correctly.

	* lib/net/http.rb (connect): does same debug output.

Mon Mar  8 21:38:18 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (add_header): remove warning. [ruby-dev:23170]

Mon Mar  8 21:09:39  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (range): Cancel change for incomplete '['. More discussion
	  is needed.

Mon Mar  8 19:35:13 2004  akira yamada  <akira@arika.org>

	* lib/uri/common.rb (URI::REGEXP::PATTERN::HOSTPORT): (?:#{PORT})
	  -> (?::#{PORT}).  [ruby-dev:23170]

Mon Mar  8 15:03:24  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (range): treat incomplete '[' as ordinary character (like
	  has_magic does). fix buffer overrun at incomplete escape like '[\'.

Mon Mar  8 13:35:32 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* regparse.c (parse_exp): need to separate initialization for bcc32.