@@ -1,3 +1,12 @@
+Wed Mar 10 16:28:42 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* eval.c (return_jump): set return value to the return
+	  destination.  separated from localjump_destination().
+
+	* eval.c (break_jump): break innermost loop (or thread or proc).
+
+	* eval.c (rb_yield_0): set exit_value for block break.
+
 Wed Mar 10 16:00:14 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* struct.c (rb_struct_s_def): Struct::new executes block with
